/*
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package google.protobuf;

option java_package = "com.google.cloud.gszutil";
option java_outer_classname = "KeyFileProto";

message KeyFile {
    string type = 1;
    string project_id = 2;
    string private_key_id = 3;
    string private_key = 4;
    string client_email = 5;
    string client_id = 6;
    string auth_uri = 7;
    string token_uri = 8;
    string auth_provider_x509_cert_url = 9;
    string client_x509_cert_url = 10;
    string access_token = 11;
    string client_secret = 12;
    string refresh_token = 13;
    string expiration_time = 14;
}